--- a/teste1/styleheader.css
+++ b/teste1/styleheader.css
@@ -38,7 +38,7 @@ header ul li{
 
 header ul li a{
     display: inline-block;
-    color: #333;
+    color: #f1f1f1;
     font-weight: 400;
     margin-left: 40px;
     text-decoration: none;
